--- a/public/index.html
+++ b/public/index.html
@@ -6,42 +6,84 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" >
         <style>
             body {
+                font-family: Tahoma;
+                font-weight: bold;
                 margin: 0;
                 display: flex;
                 height: 100vh;
-                background-color: rgb(199, 177, 80);
+                width: 100%;
+                background-color: rgb(86, 212, 196);
                 justify-content: center;
                 align-items: center;
             }
-            form {
+            fieldset {
+                border: unset;
+            }
+
+            main {
                 transform: scale(1.5);
                 display: flex;
-                background-color: white;
-                padding: 50px;
+                flex-direction: column;
+                background-color: rgb(250, 250, 250);
+                padding: 20px 50px;
                 box-shadow: 5px 5px 0px 0px black;
                 border: 5px solid black;
+                padding-bottom: 20px;
+            }
+
+            input[type="submit"], input[type="text"] {
+                background-color: white;
+                padding: 5px 10px;
+                box-shadow: 0px 2.5px 0px 0px black;
+                border-radius: 5px;
+                position: relative;
             }
 
             input[type="submit"] {
-                background-color: white;
-                padding: 5px 10px;
-                box-shadow: 2.5px 2.5px 0px 0px black;
+                transition: 0.1s linear;
             }
+
+            input[type="submit"]:hover {
+                box-shadow: 0px 0px 0px 0px transparent;
+                top: 2.5px;
+                box-shadow: 0px 0px 0px 0px black;
+                cursor: pointer;
+            }
+
+            h2, h3, code, p {
+                text-align: center;
+            }
+
+            form {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+
+            a:hover {
+                opacity: 0.75;
+            }
+
         </style>
     </head>
     <body>
         <main>
+            <h2>URL SHORTENER</h2>
+            
             <form action="/api/shorturl" method="post">
                 <fieldset>
-                    <legend>URL Shortener</legend>
-                    <label for="name">URL</label>
-                    <input type="text" name="URL">
+                    <!--<legend>URL Shortener</legend>-->
+                    <!--<label for="name">URL</label>-->
+                    <input type="text" placeholder="https:www.google.com" name="URL">
                     <input type="submit">
                 </fieldset>
             </form>
+            <h3>EXAMPLE</h3>
+            <code><a href="/api/shorturl/FlwaQXIA26">/api/shorturl/FlwaQXIA26</a></code>
+            <p> redirects to </p>
+            <code><a href="https://www.google.com">https://www.google.com</a></code><br>
         </main>
     </body>
-    <footer>
 
-    </footer>
 </html>
