--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,6 @@
                 justify-content: center;
             }
 
-
             a:hover {
                 opacity: 0.75;
             }
@@ -80,10 +79,9 @@
                 </fieldset>
             </form>
             <h3>EXAMPLE</h3>
-            <code><a href="/api/shorturl/FlwaQXIA26">/api/shorturl/FlwaQXIA26</a></code>
+            <code><a href="/api/shorturl/931774092">/api/shorturl/931774092</a></code>
             <p> redirects to </p>
             <code><a href="https://www.google.com">https://www.google.com</a></code><br>
         </main>
     </body>
-
 </html>
