--- a/server/public/index.html
+++ b/server/public/index.html
@@ -74,7 +74,7 @@
                 <fieldset>
                     <!--<legend>URL Shortener</legend>-->
                     <!--<label for="name">URL</label>-->
-                    <input type="text" placeholder="https:www.google.com" name="URL">
+                    <input type="text" placeholder="https:www.google.com" name="url">
                     <input type="submit">
                 </fieldset>
             </form>
